[package]
name = "orpa"
description = "A tool for tracking private code review"
version = "0.1.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/orpa"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "3.2.25", features = ["derive"] }
enum-map = "2.7.3"
git2 = "0.15.0"
gitlab = "0.1606.0"
globset = "0.4.14"
itertools = "0.10.5"
once_cell = "1.18.0"
pager = "0.16.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
sled = "0.34.7"
tabwriter = "1.3.0"
textwrap = "0.16.0"
timeago = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
yansi = "0.5.1"
